--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,9 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+
 @layer components {
     .container-menu {
         @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
