Tarea Final 2 - noUiSlider para filtro por rango de precio

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,9 @@
 /* Flexslider */
 @import 'flexslider/flexslider.css';
 
+/* noUiSlider */
+@import 'nouislider/dist/nouislider.min.css';
+
 /* Tailwind Custom Styles */
 @layer components {
     .container-menu {
